publish it to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kaanarslan1990.github.io/react-redux-store-app",
+  "homepage": "http://kaanarslan1990.github.io/redux-store",
   "name": "redux-store",
   "version": "0.1.0",
   "private": true,
